# cartrawler-mcp

./: .gitignore  CHATGPT_TESTING_GUIDE.md  README.md  prompt.txt  pyproject.toml  render.yaml
data/: bookings.csv  cars.csv  flights.csv  hotels.csv  knowledge_base.csv  offers.csv  search_logs.csv  sessions.csv  users.csv
scripts/: create_embeddings.py  generate_data.py  seed_db.py
src/cartrawler/: __init__.py  main.py
src/cartrawler/admin/: embedder.py  seeder.py
src/cartrawler/agent/: __init__.py  orchestrator.py
src/cartrawler/auth/: __init__.py  dependencies.py  jwt_handler.py  oauth.py  password.py  schemas.py
src/cartrawler/config/: settings.py
src/cartrawler/db/: __init__.py  database.py  models.py
src/cartrawler/mcp_server/: __init__.py  server.py
src/cartrawler/mcp_server/widgets/: booking.html  cars.html  offers.html  rides.html
src/cartrawler/rag/: __init__.py  embeddings.py  pipeline.py
src/cartrawler/tools/: auth_tools.py  car_tools.py  common.py  faq_tools.py  flight_tools.py  hotel_tools.py  offer_tools.py
tests/: test_tools.py
